modified logo and layout.html

--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" name="Keywords" content="Math tutor, Learn, Skills, Maths, Mathematics">
-    <title>{% block head_title %} m a t h s f l u x {% endblock head_title %}</title>
+    <meta charset="UTF-8" name="Keywords" content="Math-flux, Math tutor, Learn, Skills, Maths, Mathematics">
+    <title>{% block head_title %} m a t h - f l u x {% endblock head_title %}</title>
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -344,7 +344,7 @@
             </div>
 
             <div class="sidebar-header">
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/Logo_3.png' %}"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/Logo_4.png' %}"></a>
             </div>
 
 
@@ -392,7 +392,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/Logo_3.png' %}"></a>
+                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/Logo_4.png' %}"></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-left">
@@ -532,7 +532,7 @@
         </div>
         <hr>
         <div class="row">
-            <p>&copy;2018 mathsflux</p>
+            <p>&copy;2018 math-flux</p>
         </div>
     </footer>
 
