sample wsgi modified

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block head_title %} {{ block.super }} | Home {% endblock head_title %}
+{% block head_title %} {{ block.super }} | Free maths tutoring {% endblock head_title %}
 
 {% block content %}
 
