modified meta content

--- a/posts/templates/posts/layout.html
+++ b/posts/templates/posts/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="Keywords" content="Math-flux, Math tutor, Learn, Skills, Maths, Mathematics">
+    <meta charset="UTF-8" name="description" content="Free maths tutoring and full written solutions to any maths questions immediately.">
     <title>{% block head_title %} m a t h - f l u x {% endblock head_title %}</title>
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
